refactor(plugin): rename posthtml plugin to ce-defouc

--- a/packages/posthtml-ce-defouc/package.json
+++ b/packages/posthtml-ce-defouc/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "posthtml-plugin",
+  "name": "posthtml-ce-defouc",
   "description": "PostHTML plugin description",
   "version": "1.0.0",
   "author": "PostHTML",
