--- a/packages/posthtml-ce-defouc/package.json
+++ b/packages/posthtml-ce-defouc/package.json
@@ -8,7 +8,8 @@
   },
   "bugs": "https://github.com/posthtml/posthtml-plugin-boilerplate/issues",
   "dependencies": {
-    "posthtml": "^0.9.0"
+    "posthtml": "^0.9.0",
+    "posthtml-attrs-parser": "^0.1.1"
   },
   "devDependencies": {
     "ava": "^0.15.2",
