--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "scripts": {
-    "commitmsg": "commitlint -e $GIT_PARAMS"
-  },
+  "scripts": {},
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
@@ -14,5 +12,10 @@
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+    }
   }
 }
