chore: enable lint for pre-commit hook

--- a/packages/posthtml-ce-defouc/package.json
+++ b/packages/posthtml-ce-defouc/package.json
@@ -30,6 +30,7 @@
   "main": "lib",
   "repository": "posthtml/posthtml-plugin-boilerplate",
   "scripts": {
+    "precommit": "npm run lint",
     "lint": "standard | snazzy",
     "release-major": "mversion major",
     "release-minor": "mversion minor",
