--- a/lerna.json
+++ b/lerna.json
@@ -2,10 +2,5 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0",
-  "command": {
-    "publish": {
-      "conventionalCommits": true
-    }
-  }
+  "version": "0.0.0"
 }
