test(hoc): adding default inline visibility test

--- a/packages/with-custom-elements-defouc/package.json
+++ b/packages/with-custom-elements-defouc/package.json
@@ -17,8 +17,7 @@
     "test:coverage": "nwb test --coverage",
     "test:watch": "nwb test --server"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "nwb": "0.23.x"
   },
