--- a/packages/posthtml-custom-elements-defouc/package.json
+++ b/packages/posthtml-custom-elements-defouc/package.json
@@ -40,5 +40,9 @@
     "release-minor": "mversion minor",
     "release-patch": "mversion patch",
     "test": "npm run lint && ava"
+  },
+  "gitHead": "a1a7ccbdb6389a24ff15df2b56a21684de868aeb",
+  "publishConfig": {
+    "access": "public"
   }
 }
