--- a/packages/with-custom-elements-defouc/package.json
+++ b/packages/with-custom-elements-defouc/package.json
@@ -38,5 +38,9 @@
     "flash-of-unstyled-content",
     "hoc",
     "higher-order-class"
-  ]
+  ],
+  "gitHead": "a1a7ccbdb6389a24ff15df2b56a21684de868aeb",
+  "publishConfig": {
+    "access": "public"
+  }
 }
